--- a/voice-survey/templates/error.html
+++ b/voice-survey/templates/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>خطا در نظرسنجی</title>
+    <title>خطا در فرم</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 
         <div class="alert alert-danger text-center">
             <h4>متأسفانه خطایی رخ داده است</h4>
-            <p>در پردازش نظرسنجی شما مشکلی پیش آمده است.</p>
+            <p>در پردازش فرم شما مشکلی پیش آمده است.</p>
         </div>
 
         <div class="card mb-4">
